# Projet_annuel

./: Readme.txt  Todo.txt
Docs/Rapport/: MLP_CasDeTest.ipynb  Modele_lineaire_CasDeTest.ipynb  Rapport_interactif_PA_V1.ipynb
Docs/Slides/: PA_Presentation.pptx
Project/Lib/LinearModelCppLib/: CMakeLists.txt  library.cpp  library.h
Project/Lib/LinearModelForApp/: CMakeLists.txt  library.cpp
Project/Lib/MLPCppLib/: library.cpp
Project/Lib/MLPModelForApp/: CMakeLists.txt  library.cpp  library.h
Project/Lib/RBFLib/: CMakeLists.txt  library.cpp  library.h
Project/Tests/: Rapport__CAS_DE_TESTS.ipynb
Project/Tests/All_Models_Python/: All_Models_Test.py
Project/Tests/ImageUploadTest_Python/: ImageUpload.py  test.py
Project/Tests/LinearModelForDataset/: Function.py  ImageUpload.py  model_linear.txt
Project/Tests/LinearModelForDataset_Angry/: ImageUpload.py  model_linear.txt
Project/Tests/LinearModelForDataset_Happy/: ImageUpload.py  model_linear.txt
Project/Tests/LinearModelForDataset_Neutral/: ImageUpload.py  model_linear.txt
Project/Tests/LinearModel_Python/: LineaModel_Python.py  model_linear.txt
Project/Tests/MLPForDatatset/: ImageUpload.py
Project/Tests/MLPForDatatset_Angry/: ImageUpload.py  test.txt
Project/Tests/MLPForDatatset_Happy/: ImageUpload.py  test.txt
Project/Tests/MLPForDatatset_Neutral/: ImageUpload.py  test.txt
Project/Tests/MLP_Python/: MLP_Test.py  test.txt
Project/Tests/RBF_Python/: RBF_Test.py
Project/TestsDEV/MLPPythonDataset/: UploadImage.py
Project/TestsDEV/SVM1/: CMakeLists.txt  main.cpp
(+12 files in other folders)
